tests/specialization-conflict.stderr
error: 
   ┌─ test:16:1
   │
 3 │ greet :: A where (Greet A) => A -> Text
   │ ----- expected because the type was annotated here
   ·
16 │ greet :: Bar -> Number
   │ ^^^^^
   │ │
   │ function returns `Number`, but it should return `Text`
   │ this constant must have a more specific type than the original constant
   │ expected `A -> Text` for any type `A`, but found `Bar -> Number`
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/mismatched-types

error: 
   ┌─ test:25:7
   │
 3 │ greet :: A where (Greet A) => A -> Text
   │                  --------- required by this bound here
   ·
25 │ show (greet Baz)
   │       ^^^^^ could not find instance `Greet Baz`
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/missing-instance

